# kraken

./: .aoneci.yml  .editorconfig  .eslintrc.js  .gitignore  AUTHORS.txt  GOVERNANCE.md  GOVERNANCE.zh-CN.md  LICENSE  README.md  analysis_options.yaml  package-lock.json  package.json  test.html  third_party
bridge/: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  CMakeLists.txt  bridge.cc  bridge.h  bridge_export.cc  bridge_jsa.cc  bridge_jsa.h  bridge_jsc.cc  bridge_jsc.h  bridge_qjs.cc  bridge_qjs.h  bridge_test.cc  bridge_test.h  bridge_test_export.cc  bridge_test_jsa.cc  bridge_test_jsa.h  bridge_test_jsc.cc  bridge_test_jsc.h  bridge_test_qjs.cc  bridge_test_qjs.h  dart_callbacks.cc  dart_callbacks.h  dart_methods.cc  dart_methods.h  kraken_bridge.cc  kraken_bridge_export.cc  kraken_bridge_test.cc  message.cc  message.h  page.cc  page.h  page_test.cc  page_test.h  tsconfig.json  webf_bridge.cc  webf_bridge_test.cc
bridge/benchmark/: benchmark.cmake  test.cc
bridge/bindings/: console.cc  console.h  fetch.cc  fetch.h  kraken.cc  kraken.h  screen.cc  screen.h  thread_safe_array.h  thread_safe_data.h  thread_safe_map.h  timer.cc  timer.h  websocket.cc  websocket.h  window.cc  window.h
bridge/bindings/BOM/: websocket.cc  window.h
bridge/bindings/DOM/: document.cc  document.cpp  document.h  element.cc  element.cpp  element.h  eventTarget.cc  eventTarget.h  node.h
bridge/bindings/KOM/: blob.cc  blob.h  console.cc  fetch.cc  fetch.h  location.cc  location.h  screen.cc  screen.h  timer.cc  timer.h  toBlob.cc  toBlob.h  websocket.cc  websocket.h  window.cc  window.h
bridge/bindings/jsa/: kraken.cc  kraken.h  ui_manager.cpp  ui_manager.h
bridge/bindings/jsc/: foundation.h  host_class.cc  host_class.h  host_object.cc  host_object.h  host_object_internal.cc  host_object_internal.h  html_parser.cc  html_parser.h  js_context.cc  js_context.h  js_context_internal.cc  js_context_internal.h  kraken.cc  (+5 more)
bridge/cmake/: ios.toolchain.cmake
bridge/core/: built_in_string.json  dart_methods.h  executing_context.cc  executing_context.h  executing_context_data.cc  executing_context_data.h  executing_context_test.cc  html_element_factory.cc  html_element_factory.h  html_names.cc  html_names.h  page.cc  page.h  script_state.cc  script_state.h
bridge/devtools/: devtool.cmake  frontdoor.cc  frontdoor.h  inspector_session_impl.cc  inspector_session_impl.h
bridge/foundation/: CMakeLists.txt  ascii_types.h  asio-1.12.1  bridge_callback.cc  bridge_callback.h  callback_context.h  casting.h  closure.h  colors.h  count_down_latch.cc  count_down_latch.h  flushUITask.cc  flushUITask.h  inspector_task_queue.cc  inspector_task_queue.h  js_engine_adaptor.h  logging.cc  logging.h  macros.h  make_copyable.h  native_string.cc  native_string.h  native_type.h  native_value.cc  native_value.h  native_value_converter.cc  native_value_converter.h  ref_counted.h  ref_counted_internal.h  ref_counter.h  ref_ptr.h  ref_ptr_internal.h  string_view.cc  string_view.h  task_queue.cc  task_queue.cpp  task_queue.h  thread_annotations.h  thread_safe_array.h  thread_safe_map.h  (+25 more)
bridge/include/: bridge_export.h  bridge_test_export.h  dart_methods.h  kraken_bridge.h  kraken_bridge_export.h  kraken_bridge_jsc.h  kraken_bridge_jsc_config.h  kraken_bridge_test.h  kraken_foundation.h  webf_bridge.h  webf_bridge_test.h  webf_foundation.h
bridge/inspector/: .gitignore  build_for_darwin.sh  frontdoor.cc  frontdoor.h  inspector.cmake  inspector_session.cc  inspector_session.h  inspector_session_impl.cc  inspector_session_impl.h  protocol_handler.h  rpc_session.cc  rpc_session.h
bridge/jsa/: jsa.cmake
bridge/linux/: kraken_embbeder.cc  kraken_embbeder.h
bridge/polyfill/: README.md  jest.config.js  package.json  rollup.config.js  rollup.config.ts  tsconfig.json  webpack.config.js
bridge/test/: CMakeLists.txt  console_test.cc  googletest  kraken_test_context.cc  kraken_test_context.h  kraken_test_env.cc  kraken_test_env.h  message_test.cc  reload_test.cc  run_integration_test.cc  test.cmake  test_framework_test.cc  unit_test_util.cc  unit_test_util.h  webf_test_env.cc  webf_test_env.h  websocket_test.cc
devtools/: CMakeLists.txt  README.md  chrome_protocol_server.cc  chrome_protocol_server.h  chrome_rpc_session.cc  chrome_rpc_session.h  frontdoor.cc  frontdoor.h  inspector_session_impl.cc  inspector_session_impl.h  protocol_handler.h
devtools/impl/: jsc_console_client_impl.cc  jsc_console_client_impl.h  jsc_debugger_agent_impl.cc  jsc_debugger_agent_impl.h  jsc_debugger_impl.cc  jsc_debugger_impl.h  jsc_heap_profiler_agent_impl.cc  jsc_heap_profiler_agent_impl.h  jsc_log_agent_impl.cc  jsc_log_agent_impl.h  jsc_page_agent_impl.cc  jsc_page_agent_impl.h  jsc_runtime_agent_impl.cc  jsc_runtime_agent_impl.h
devtools/protocol/: break_location.cc  break_location.h  breakpoint_resolved_notification.cc  breakpoint_resolved_notification.h  call_argument.cc  call_argument.h  call_frame.cc  call_frame.h  debug_dispatcher_impl.cc  debug_dispatcher_impl.h  debugger_backend.h  debugger_dispatcher_contract.cc  debugger_dispatcher_contract.h  debugger_frontend.cc  debugger_frontend.h  debugger_protocol.json  dispatch_response.cc  dispatch_response.h  dispatcher_base.cc  dispatcher_base.h  domain.h  entry_added_notification.cc  entry_added_notification.h  entry_preview.cc  entry_preview.h  error_support.cc  error_support.h  exception_details.cc  exception_details.h  execution_context_created_notification.cc  execution_context_created_notification.h  execution_context_description.cc  execution_context_description.h  frontend_channel.h  heap_profiler_backend.h  heap_profiler_dispatcher_contract.cc  heap_profiler_dispatcher_contract.h  heap_profiler_dispatcher_impl.cc  heap_profiler_dispatcher_impl.h  heap_profiler_frontend.cc  (+57 more)
jsa/: CMakeLists.txt
jsa/abstraction/: CMakeLists.txt  instrumentation.h  js_context.cc  js_context.h  js_error.cc  js_type.h  jsa.h  macros.h
platform/linux_x64/: CMakeLists.txt  bridge  kraken_embbeder.h
platform/macos/: CMakeLists.txt
webf/linux/: CMakeLists.txt  webf_plugin.cc
(+3560 files in other folders)
